--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -10,7 +10,7 @@
 006=22012 Division by zero
 007=22019 Invalid escape character
 008=23000 Integrity constraint violation
-009=23000 Violation of unique index
+009=23000 Violation of unique index $$: duplicate value(s) for column(s) $$
 010=23000 Attempt to insert null into a non-nullable column
 011=37000 Unexpected token
 012=37000 Unexpected end of command
@@ -105,7 +105,7 @@
 101=\u0020$$ table: $$
 102=duplicate column in list
 103=table has no primary key
-104=23000 Unique constraint violation
+104=23000 Violation of unique constraint $$: duplicate value(s) for column(s) $$
 105=S0021 missing DEFAULT value on column $$
 106=S1000 Not a condition
 107=attempt to connect while db opening /closing
