--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -16,7 +16,7 @@
 012=37000 Unexpected end of command
 013=37000 Unknown function
 014=37000 Need aggregate function or group by
-015=37000 Sum on non-numeric data not allowed
+015=37000 Set Function on non-numeric data is not allowed
 016=37000 Wrong data type
 017=21000 Single value expected
 018=40001 Serialization failure
