--- a/base-one/trunk/src/org/hsqldb/sample/sample-server.properties
+++ b/base-one/trunk/src/org/hsqldb/sample/sample-server.properties
@@ -2,3 +2,8 @@
 # See the Advanced Topics chapter of the Hsqldb User Guide.
 
 server.database.0   file:db0/db0
+# I suggest that, for every file: database you define, you add the
+# connection property "ifexists=true" after the database instance
+# is created (which happens simply by starting the Server one time).
+# Just append ";ifexists=true" to the file: URL, like so:
+# server.database.0   file:db0/db0;ifexists=true
