Frank Shoenheit's enhancements to text tables.

--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -256,5 +256,6 @@
 252=37000 column is part of a constraint
 253=37000 column size is required
 254=37000 invalid size or precision
-255=LAST
+255=22001 The table cannot be disconnected from its data source
+256=LAST
 # note: do not translate the first and last message
