--- a/base-one/trunk/src/org/hsqldb/util/sqltool.properties
+++ b/base-one/trunk/src/org/hsqldb/util/sqltool.properties
@@ -1,4 +1,4 @@
-# $Id: sqltool.properties 322 2007-06-25 16:00:18Z unsaved $
+# $Id: sqltool.properties 325 2007-06-26 02:32:48Z unsaved $
 
 # IMPORTANT:  Make sure to use ISO-8859-1 encoding for any extended characters,
 # both in this file (actually any .properties file) and all referenced text
@@ -190,6 +190,7 @@ none: None
 insertion.preparefail: Failed to prepare insertion setup string:\u000a"%{1}"
 dsv.header.matchernonhead: Non-Header line within table matcher block at DSV file line %{1}.
 dsv.colcount.mismatch: Header has %{1} columns, but input record has %{2} column values.
+dsv.insertcol.mismatch: Expected total of %{1} insert values, but gathered %{2}.
 dsv.nonskip.mismatch: Header has %{1} non-skip columns, but input record has %{2} insertion values.
 time.bad: Bad date/time value '%{1}'.
 boolean.bad: Bad boolean value '%{1}'.
