--- a/base-one/trunk/src/org/hsqldb/util/sqltool.properties
+++ b/base-one/trunk/src/org/hsqldb/util/sqltool.properties
@@ -1,4 +1,4 @@
-# $Id: sqltool.properties 325 2007-06-26 02:32:48Z unsaved $
+# $Id: sqltool.properties 334 2007-06-28 03:18:59Z unsaved $
 
 # IMPORTANT:  Make sure to use ISO-8859-1 encoding for any extended characters,
 # both in this file (actually any .properties file) and all referenced text
@@ -25,26 +25,28 @@ rejectreport.bottom
 
 # Traditional inline .properties values:
 rawmode.prompt: raw
-SqlTool.varset.badformat: Var settings not of format "name=value[,...]".
+SqlTool.varset.badformat: Variable settings not of format "name=value[,...]".
 SqlTool.abort_continue.mutuallyexclusive: Switches '--abortOnErr' and \
                         '--continueOnErr' are mutually exclusive.
 sqltempfile.fail: Failed to write given sql to temp file.\u000aCause: %{1}
 rcdata.inlineurl.missing: 'url' element is required for inline RC arg.
 rcdata.inline.extravars: Unsupported inline element(s) supplied: %{1}.
 rcdata.inlineusername.missing: 'user' element is required for inline RC arg.
+rcdata.password.visible: 'password' element must have empty value.  \
+            For non-empty password, give no\u000a\
+            password element and you will be prompted for the value.
 password.readfail: Failed to read in password.\u000aCause: %{1}
-sqltempfile.fail: Failed to write given sql to temp file.\u000aCause: %{1}
 rcdata.genfromvalues.fail: Failed to generate RCData from given values.\u000aCause: %{1}
 conndata.retrieval.fail: Failed to retrieve connection info for urlid "%{1}".\u000aCause: %{2}
 jdbc.established: JDBC Connection established to a %{1} v. %{2} database as "%{3}".
 connection.fail: Failed to get a connection to '%{1}' as user "%{2}".\u000aCause: %{3}
-tempfile.removal.fail: Error occurred while trying to remove temp file '%1'.
+tempfile.removal.fail: Error occurred while trying to remove temp file '%{1}'.
 # Value for following line has trailing whitespace on purpose.
 passwordFor.prompt: Enter password for %{1}:  
 
 sqlfile.readfail: Can't read SQL file '%{1}'.
-raw.movedtobuffer: Raw SQL chunk moved into buffer.  Run ":;" to execute the chunk.
-input.movedtobuffer: Current input moved into buffer.
+raw.movedtobuffer: Raw SQL chunk moved into edit buffer.  Run ":;" to execute the chunk.
+input.movedtobuffer: Current input moved into edit buffer.
 sqlstatement.empty: Empty SQL Statement.
 causereport: Cause: %{1}
 break.unsatisfied: Unsatisfied 'break' statement (type %{1}).
@@ -55,17 +57,18 @@ aborting: Aborting SqlTool:  %{1}
 plvar.set.incomplete: Never completed setting of variable '%{1}'.
 inputreader.closefail: Failed to close input reader.
 rollingback: Rolling back SQL transaction.
-special.unspecified: Special command of no specific type?
-buffer.executing: Executing command from buffer:\u000a"%{1}"\u000a
+bufhist.unspecified: No command specified.  Run ":?" to list Edit-Buffer/History Commands.
+special.unspecified: No command specified.  Run "\\?" to list Special Commands.
+buffer.executing: Executing command from edit buffer:\u000a"%{1}"\u000a
 executing: Executing command:\u000a"%{1}"\u000a
-nobuffer.yet: No buffer yet.
+nobuffer.yet: No edit buffer contents yet.
 commandnum.malformat: Malformatted command number "%{1}".
 buffer.restored: Restored following command to buffer.  Enter ":?" to list buffer commands.\u000a%{1}
 substitution.malformat: Malformatted substitution command
-substitution.nomatch: Buffer unchanged due to no pattern match
+substitution.nomatch: Edit buffer unchanged due to no pattern match
 substitution.syntax: Substitution syntax: ":s/from regex/to string/igm;".  \
                      Optional modes i, g, m, ;.
-buffer.unknown: Unknown Buffer command ":%{1}".
+buffer.unknown: Unknown Edit-Buffer/History command ":%{1}".
 dsv.x.syntax: Export syntax:  "\\x table_or_view_name "  OR  "\\x SELECT statement".\u000a\
 (Do not end with ';', since the \\x command itself is not SQL).
 dsv.m.syntax: Import syntax:  \\m file/path.dsv [*]   (* means no comments in DSV file).
@@ -82,7 +85,7 @@ special.d.like: Describe commands must be like '\\dX' or like '\\d OBJECTNAME'. 
 outputfile.nonetoclose: There is no query output file to close.
 outputfile.reopening: Closing current query output file and opening new one.
 outputfile.header: Query output from %{1}.
-buffer.empty: No command in buffer.
+buffer.empty: No command in edit buffer.
 sqlfile.name.demand: You must supply an SQL file name.
 sqlfile.execute.fail: Failed to execute contents of SQL file '%{1}'.
 a.setting: Auto-commit is set to %{1}.
@@ -153,8 +156,8 @@ row.update.multiple: %{1} rows updated.
 row.update.singular: 1 row updated.
 history.unavailable: Command history not available.
 history.none: No history yet.
-editbuffer.contents: Edit-Buffer contents:\u000a"%{1}"
-buffer.instructions: Copy a command to buffer like ":27" or ":-3".  \
+editbuffer.contents: Edit buffer contents:\u000a"%{1}"
+buffer.instructions: Copy a command to edit buffer like ":27" or ":-3".  \
                     Re-execute buffer like ":;".
 history.number.req: You must specify a positive absolute command number, or \
                     a negative number\u000ameaning X commands "back".
