--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages.properties
@@ -257,5 +257,7 @@
 253=37000 column size is required
 254=37000 invalid size or precision
 255=22001 The table cannot be disconnected from its data source
-256=LAST
+256=S1000 invalid file access class: $$
+257=S1000 invalid storage class: $$
+258=LAST
 # note: do not translate the first and last message
