--- a/dotnet/trunk/CruiseControl.NET/server/ccnet.config
+++ b/dotnet/trunk/CruiseControl.NET/server/ccnet.config
@@ -14,7 +14,7 @@
     </triggers>
     <tasks>
       <msbuild>
-        <executable>D:\WINDOWS\Microsoft.NET\Framework\v2.0.50727\MSBuild.exe</executable>
+        <executable>C:\WINDOWS\Microsoft.NET\Framework\v2.0.50727\MSBuild.exe</executable>
         <workingDirectory>System.Data.Hsqldb</workingDirectory>
         <projectFile>System.Data.Hsqldb.sln</projectFile>
         <buildArgs>/noconsolelogger /p:Configuration=Debug</buildArgs>
@@ -26,7 +26,15 @@
         <path>..\..\NUnit\bin\nunit-console.exe</path>
         <outputfile>nunit-results.xml</outputfile>
         <assemblies>
-          <assembly>System.Data.Hsqldb\Lib\Org.Hsqldb.dll</assembly>
+          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Common.UnitTests\bin\Debug\System.Data.Hsqldb.Common.UnitTests.dll</assembly>
+          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Client.UnitTests\bin\Debug\System.Data.Hsqldb.Client.UnitTests.dll</assembly>
+        </assemblies>
+      </nunit>
+      <nunit>
+        <path>..\..\NUnit\bin\nunit-console.exe</path>
+        <outputfile>nunit-results.xml</outputfile>
+        <assemblies>
+          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Client.UnitTests\bin\Debug\System.Data.Hsqldb.Client.UnitTests.dll</assembly>
         </assemblies>
       </nunit>
     </tasks>
