More changes in response to unit testing.

--- a/dotnet/trunk/CruiseControl.NET/server/ccnet.config
+++ b/dotnet/trunk/CruiseControl.NET/server/ccnet.config
@@ -26,15 +26,7 @@
         <path>..\..\NUnit\bin\nunit-console.exe</path>
         <outputfile>nunit-results.xml</outputfile>
         <assemblies>
-          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Common.UnitTests\bin\Debug\System.Data.Hsqldb.Common.UnitTests.dll</assembly>
-          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Client.UnitTests\bin\Debug\System.Data.Hsqldb.Client.UnitTests.dll</assembly>
-        </assemblies>
-      </nunit>
-      <nunit>
-        <path>..\..\NUnit\bin\nunit-console.exe</path>
-        <outputfile>nunit-results.xml</outputfile>
-        <assemblies>
-          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.Client.UnitTests\bin\Debug\System.Data.Hsqldb.Client.UnitTests.dll</assembly>
+          <assembly>System.Data.Hsqldb\System.Data.Hsqldb.nunit</assembly>
         </assemblies>
       </nunit>
     </tasks>
