--- a/odbc/trunk/src/hsqlodbc.vcproj
+++ b/odbc/trunk/src/hsqlodbc.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="psqlODBC"
+	Name="hsqlodbc"
 	ProjectGUID="{C45ECB41-8473-4F11-8186-E5574CFBADCF}"
 	>
 	<Platforms>
@@ -36,7 +36,7 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Release/psqlodbc.tlb"
+				TypeLibraryName=".\Release/hsqlodbcu.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -71,16 +71,16 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib XOleHlp.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib ssleay32.lib libeay32.lib"
-				OutputFile="psqlodbc35w.dll"
+				OutputFile="hsqlodbcu.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\Program Files\PostgreSQL\8.2\lib\ms&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
 				IgnoreAllDefaultLibraries="false"
-				ModuleDefinitionFile=".\psqlodbc.def"
+				ModuleDefinitionFile=".\hsqlodbcu.def"
 				DelayLoadDLLs="ssleay32.dll;libeay32.dll;secur32.dll;crypt32.dll;XOLEHLP.DLL"
-				ProgramDatabaseFile="psqlodbc35w.pdb"
+				ProgramDatabaseFile="hsqlodbcu.pdb"
 				SubSystem="2"
-				ImportLibrary="psqlodbc35w.lib"
+				ImportLibrary="hsqlodbcu.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -95,7 +95,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Release/psqlodbc.bsc"
+				OutputFile=".\Release/hsqlodbc.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -133,7 +133,7 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Debug/psqlodbc.tlb"
+				TypeLibraryName=".\Debug/hsqlodbc.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -146,7 +146,7 @@
 				StringPooling="true"
 				RuntimeLibrary="1"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\Debug/psqlodbc.pch"
+				PrecompiledHeaderFile=".\Debug/hsqlodbc.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
@@ -169,17 +169,17 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib XOleHlp.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib wsock32.lib winmm.lib ssleay32.lib libeay32.lib"
-				OutputFile="psqlodbc35w.dll"
+				OutputFile="hsqlodbcu.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="&quot;C:\Program Files\PostgreSQL\8.2\lib\ms&quot;;&quot;C:\OpenSSL\lib\VC&quot;"
 				IgnoreAllDefaultLibraries="false"
-				ModuleDefinitionFile=".\psqlodbc.def"
+				ModuleDefinitionFile=".\hsqlodbcu.def"
 				DelayLoadDLLs="ssleay32.dll;libeay32.dll;secur32.dll;crypt32.dll;XOLEHLP.DLL"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="psqlodbc35w.pdb"
+				ProgramDatabaseFile="hsqlodbcu.pdb"
 				SubSystem="2"
-				ImportLibrary="psqlodbc35w.lib"
+				ImportLibrary="hsqlodbcu.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -194,7 +194,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Debug/psqlodbc.bsc"
+				OutputFile=".\Debug/hsqlodbu.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -1092,11 +1092,11 @@
 			Name="resource"
 			>
 			<File
-				RelativePath="psqlodbc.def"
+				RelativePath="hsqlodbcu.def"
 				>
 			</File>
 			<File
-				RelativePath="psqlodbc.rc"
+				RelativePath="hsqlodbc.rc"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
